@@ -5,9 +5,9 @@ package com.kaisn.utils.encry; /**
  * @version 1.0
  * @date 2018/10/18
  */
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
+import java.util.Base64;
+import java.util.Base64.Encoder;
+import java.util.Base64.Decoder;
 import javax.crypto.*;
 import javax.crypto.spec.SecretKeySpec;
 import java.io.IOException;
@@ -59,7 +59,8 @@ public class SymmetricEncoder {
             //这里用Base64Encoder中会找不到包
             //解决办法：
             //在项目的Build path中先移除JRE System Library，再添加库JRE System Library，重新编译后就一切正常了。
-            String AES_encode=new String(new BASE64Encoder().encode(byte_AES));
+            Encoder encoder = Base64.getEncoder();
+            String AES_encode = encoder.encodeToString(byte_AES);
             //11.将字符串返回
             return AES_encode;
         } catch (NoSuchAlgorithmException e) {
@@ -108,7 +109,8 @@ public class SymmetricEncoder {
             //7.初始化密码器，第一个参数为加密(Encrypt_mode)或者解密(Decrypt_mode)操作，第二个参数为使用的KEY
             cipher.init(Cipher.DECRYPT_MODE, key);
             //8.将加密并编码后的内容解码成字节数组
-            byte [] byte_content= new BASE64Decoder().decodeBuffer(content);
+            Decoder decoder = Base64.getDecoder();
+            byte[] byte_content = decoder.decode(content);
             /*
              * 解密
              */
